# RegressionLab

./: .env.example  .env_mobile.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  THIRD_PARTY_LICENSES.md  install.sh  install_termux.sh  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_termux.txt  run.bat  run.sh  run_tests.bat  run_tests.sh  setup.bat  setup.sh  setup_termux.sh
.github/workflows/: python-app.yml
.streamlit/: config.toml
desktop/: electron.tsconfig.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/electron/: main.ts  preload.ts
desktop/scripts/: ensure-build.mjs
desktop/src/: App.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
desktop/src/api/: client.ts
desktop/src/components/: FormattedText.test.tsx  FormattedText.tsx  HelpSection.tsx  PlotPanel.tsx  Shell.tsx  ThemedSelect.test.tsx  ThemedSelect.tsx
desktop/src/i18n/: index.test.ts  index.ts
desktop/src/pages/: ConfigPage.tsx  DataLabPage.tsx  FitWorkspacePage.tsx  HelpPage.tsx  HomePage.tsx
desktop/src/store/: appStore.ts
desktop/src/utils/: configFields.test.ts  configFields.ts  resultText.test.ts  resultText.ts
desktop/tests/e2e/: home.spec.ts
docs/: README.md  configuration.md  contributing.md  customization.md  extending.md  index.md  installation.md  introduction.md  license.md  streamlit-guide.md  tkinter-guide.md  troubleshooting.md  usage.md
docs/api/: config.md  custom_function_evaluator.md  data_loader.md  estimators.md  exceptions.md  fitting_functions.md  fitting_utils.md  i18n.md  image_utils.md  index.md  keyboard_nav.md  loading_utils.md  logger.md  plot_utils.md  streamlit_app.md  ui_dialogs.md  ui_main_menu.md  validators.md  window_utils.md
input/: .gitkeep  3Var_Linear1.csv  3Var_Linear1.txt  3Var_Linear1.xlsx  3Var_Mixed1.csv  3Var_Mixed1.txt  3Var_Mixed1.xlsx  3Var_Quadratic1.csv  3Var_Quadratic1.txt  3Var_Quadratic1.xlsx  Cosine1.csv  Cosine1.txt  Cosine1.xlsx  Cosine2_Phase.csv  Cosine2_Phase.txt  Cosine2_Phase.xlsx  Exponential1.csv  Exponential1.txt  Exponential1.xlsx  FourthPower1.csv  FourthPower1.txt  FourthPower1.xlsx  Gaussian1.csv  Gaussian1.txt  Gaussian1.xlsx  Hermite3_1.csv  Hermite3_1.txt  Hermite3_1.xlsx  Hermite4_1.csv  Hermite4_1.txt  Hermite4_1.xlsx  HyperbolicCosine1.csv  HyperbolicCosine1.txt  HyperbolicCosine1.xlsx  HyperbolicSine1.csv  HyperbolicSine1.txt  HyperbolicSine1.xlsx  Inverse1_Boyle.csv  Inverse1_Boyle.txt  Inverse1_Boyle.xlsx  (+48 more)
output/: .gitkeep
scripts/: clean.py  generate_multi_var_dataset.py  generate_test_datasets.py
sphinx-docs/: build_docs.bat  build_docs.sh  requirements.txt
sphinx-docs/source/: conf.py  configuration.rst  index.rst  installation.rst  introduction.rst  streamlit-guide.rst  tkinter-guide.rst  usage.rst
sphinx-docs/source/modules/: core.rst  fitting.rst  frontend.rst  loaders.rst  (+3 more)
src/: __init__.py  config.py  i18n.py  main_program.py
src/config/: __init__.py  color_utils.py  constants.py  env.py  equation_registry.py  equations.user.yaml  equations.yaml  paths.py  theme.py
src/data_analysis/: __init__.py  _utils.py  cleaning.py  transforms.py
src/fitting/: __init__.py  custom_function_evaluator.py  estimators.py  fitting_functions.py  fitting_utils.py  workflow_controller.py
src/frontend/: __init__.py  image_utils.py  keyboard_nav.py  ui_dialogs.py  ui_main_menu.py  window_utils.py
src/loaders/: __init__.py  data_loader.py  loading_utils.py
src/locales/: de.json  en.json  es.json
src/plotting/: __init__.py  plot_utils.py
src/regressionlab/: __init__.py  desktop_api.py  main_program.py  streamlit_runner.py
src/streamlit_app/: __init__.py  app.py  theme.py
src/utils/: __init__.py  exceptions.py  logger.py  update_checker.py  validators.py
tests/: __init__.py  conftest.py  run_tests.py  test_cleaning.py  test_config.py  test_custom_function_evaluator.py  test_data_loader.py  test_desktop_api.py  test_equation_compatibility.py  test_equation_extensibility.py  test_equation_registry.py  test_exceptions.py  test_fitting_functions.py  test_fitting_utils.py  test_i18n.py  test_import_hygiene.py  test_loading_utils.py  test_logger.py  test_saving_utils.py  test_transforms.py  test_validators.py  test_workflow_controller.py
(+57 files in other folders)
